Compiled code and added deequ in the framework